--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yoms Bank</title>
-</head>
-<body>    
+  </head>
+  <body>
     <form>
-        <input placeholder="username" type="text" name="username" id="username">
-        <input placeholder="password" type="text" name="password" id="password">
-        <button type="button" onclick="login()">Login</button>     
-        <button type="button" onclick="signUp()">SignUp</button>        
+      <input placeholder="username" type="text" name="username" id="username" />
+      <input placeholder="password" type="text" name="password" id="password" />
+      <button type="button" onclick="login()">Login</button>
+      <button type="button" onclick="signUp()">SignUp</button>
     </form>
-        <script src="/jquery.min.js"></script>
-        <script src="/script.js"></script>
-</body>
+    <script type="text/javascript" src="/jquery.min.js"></script>
+    <script type="text/javascript" src="/script.js"></script>
+  </body>
 </html>
