--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yoms Bank</title>
-    <script type="text/javascript" src="/jquery.min.js"></script>
-    <script type="text/javascript" src="/script.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <form>
