--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -10,8 +10,8 @@
   </head>
   <body>
     <form>
-      <input placeholder="username" type="text" name="username" id="username" />
-      <input placeholder="password" type="text" name="password" id="password" />
+      <input required placeholder="username" type="text" name="username" id="username" />
+      <input required placeholder="password" type="text" name="password" id="password" />
       <button type="button" onclick="login()">Login</button>
       <button type="button" onclick="signUp()">SignUp</button>
     </form>
